samples/_failures_safe/1761094107_041d1b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_064f0d71.c: In function ‘main’:
./samples/SAFE/__tmp_064f0d71.c:148:22: error: incompatible types when initializing type ‘double’ using type ‘double (*)(const Matrix *)’
  148 |         double det = compute_determinant
      |                      ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_064f0d71.c:148:9: error: expected ‘,’ or ‘;’ at end of input
  148 |         double det = compute_determinant
      |         ^~~~~~
./samples/SAFE/__tmp_064f0d71.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_064f0d71.c:148:9: error: expected declaration or statement at end of input
